# loopgain

./: .gitignore  CHANGELOG.md  Makefile  PROTOCOL_v2_classifier.md  README.md  RESULTS_v2_classifier.md  TELEMETRY.md  pyproject.toml
examples/: 01_code_pytest.py  02_json_extract.py  03_essay_critique.py  04_sql_synth.py  05_unsolvable_oscillates.py  05_unsolvable_stalls.py  06_diverges.py  07_agentic_multistep.py  README.md  _common.py
logos/: Logos.fig  hero _ amber.html
loopgain/: __init__.py  __main__.py  _version.py  classifier.py  cli.py  core.py  funnel.py  telemetry.py
loopgain/integrations/: __init__.py  autogen.py  claude_agent_sdk.py  crewai.py  langchain.py  langgraph.py  openai_agents.py
tests/: test_classifier_mock_validation.py  test_classifier_synthetic.py  test_core.py  test_funnel.py  test_integrations.py  test_stress.py  test_telemetry.py  test_termination_safety.py
tests/integration/: test_autogen_smoke.py  test_claude_agent_sdk_smoke.py  test_crewai_smoke.py  test_langchain_smoke.py  test_langgraph_smoke.py  test_openai_agents_smoke.py
