[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loopgain"
version = "0.1.7"
description = "Barkhausen stability monitor for AI agent loops. Real-time loop-gain (Aβ) monitoring with five named threshold bands, best-so-far rollback, and ETA prediction."
authors = [{name = "Dave Fitzsimmons", email = "hello@loopgain.ai"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = [
    "ai",
    "agent",
    "ai-agent",
    "ai-agents",
    "agentic",
    "agentic-ai",
    "llm",
    "llm-agent",
    "llm-orchestration",
    "agent-orchestration",
    "agent-loop",
    "verify-revise",
    "verify-revise-loop",
    "gvr",
    "generator-verifier-reviser",
    "convergence",
    "divergence-detection",
    "infinite-loop",
    "infinite-loop-detection",
    "loop-detection",
    "loop-stability",
    "stability-monitor",
    "early-stopping",
    "max-iterations",
    "barkhausen",
    "barkhausen-criterion",
    "control-theory",
    "feedback-loop",
    "feedback-loop-stability",
    "loop-gain",
    "rollback",
    "best-so-far",
    "langgraph",
    "crewai",
    "autogen",
    "claude",
    "anthropic",
    "openai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://loopgain.ai"
Repository = "https://github.com/loopgain-ai/loopgain"
Issues = "https://github.com/loopgain-ai/loopgain/issues"

[project.optional-dependencies]
test = ["pytest>=7.0"]
# Framework adapter extras. Install with e.g. `pip install loopgain[langgraph]`.
# Versions are floors only — any reasonably recent release should work since
# the adapters duck-type the framework's public stream/callback surface.
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.30"]
autogen = ["autogen-agentchat>=0.4"]
all = ["langgraph>=0.2", "crewai>=0.30", "autogen-agentchat>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["loopgain*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that import a real framework (langgraph, crewai, autogen). Skipped automatically when the framework isn't installed.",
]
