[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loopgain"
# Single source of truth: loopgain/_version.py (read dynamically below).
# Bump the version in that one file per release; this no longer duplicates it.
dynamic = ["version"]
description = "An open-source cost controller for AI agent loops. Stops a loop when it has actually converged and rolls back before it degrades — replacing the max_iterations guess with a real-time loop-gain (Aβ) monitor with five named threshold bands and best-so-far rollback."
authors = [{name = "Dave Fitzsimmons", email = "hello@loopgain.ai"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = [
    "ai",
    "agent",
    "ai-agent",
    "ai-agents",
    "agentic",
    "agentic-ai",
    "llm",
    "llm-agent",
    "llm-orchestration",
    "agent-orchestration",
    "agent-loop",
    "verify-revise",
    "verify-revise-loop",
    "gvr",
    "generator-verifier-reviser",
    "convergence",
    "divergence-detection",
    "infinite-loop",
    "infinite-loop-detection",
    "loop-detection",
    "loop-stability",
    "stability-monitor",
    "early-stopping",
    "max-iterations",
    "barkhausen",
    "barkhausen-criterion",
    "control-theory",
    "feedback-loop",
    "feedback-loop-stability",
    "loop-gain",
    "rollback",
    "best-so-far",
    "langgraph",
    "crewai",
    "autogen",
    "langchain",
    "openai-agents",
    "openai-agents-sdk",
    "claude-agent-sdk",
    "claude",
    "anthropic",
    "openai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://loopgain.ai"
Repository = "https://github.com/loopgain-ai/loopgain"
Issues = "https://github.com/loopgain-ai/loopgain/issues"

[project.scripts]
loopgain = "loopgain.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0"]
# Framework adapter extras. Install with e.g. `pip install loopgain[langgraph]`.
# Versions are floors only — any reasonably recent release should work since
# the adapters duck-type the framework's public stream/callback surface.
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.30"]
autogen = ["autogen-agentchat>=0.4"]
langchain = ["langchain>=1.0"]
openai-agents = ["openai-agents>=0.1"]
claude-agent-sdk = ["claude-agent-sdk>=0.2"]
all = [
    "langgraph>=0.2",
    "crewai>=0.30",
    "autogen-agentchat>=0.4",
    "langchain>=1.0",
    "openai-agents>=0.1",
    "claude-agent-sdk>=0.2",
]
# Dependencies for the runnable scripts under examples/ (real Claude calls
# via the Anthropic SDK). Not a runtime dep — `pip install loopgain` stays
# zero-dep. Install with `pip install 'loopgain[examples]'`.
examples = ["anthropic>=0.40.0"]

[tool.setuptools.dynamic]
# Reads the literal ``__version__ = "x.y.z"`` from loopgain/_version.py via AST
# (no import), so pyproject.toml never duplicates the version string.
version = {attr = "loopgain._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["loopgain*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that import a real framework (langgraph, crewai, autogen, langchain, openai-agents, claude-agent-sdk). Skipped automatically when the framework isn't installed.",
]
